; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_h26x.c_check_Property.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_h26x.c_check_Property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**, i32 (i32*, i8*)*)* @check_Property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_Property(i32* %0, i8** %1, i32 (i32*, i8*)* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32 (i32*, i8*)*, align 8
  store i32* %0, i32** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i32 (i32*, i8*)* %2, i32 (i32*, i8*)** %7, align 8
  br label %8

8:                                                ; preds = %20, %3
  %9 = load i8**, i8*** %6, align 8
  %10 = load i8*, i8** %9, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %23

12:                                               ; preds = %8
  %13 = load i32 (i32*, i8*)*, i32 (i32*, i8*)** %7, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = load i8**, i8*** %6, align 8
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 %13(i32* %14, i8* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %12
  store i32 1, i32* %4, align 4
  br label %24

20:                                               ; preds = %12
  %21 = load i8**, i8*** %6, align 8
  %22 = getelementptr inbounds i8*, i8** %21, i32 1
  store i8** %22, i8*** %6, align 8
  br label %8

23:                                               ; preds = %8
  store i32 0, i32* %4, align 4
  br label %24

24:                                               ; preds = %23, %19
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
